--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -8,6 +8,7 @@
     top: 0;
     font-weight: lighter;
     margin-top: 0;
+    border: none;
     /* hey*/
 
 }
@@ -18,10 +19,10 @@
     position: fixed;
     width: 100%;
     background-color: #F0F0F0;
-    margin-top: 15px;
+    top: 23px;
     align-items: center;
     display: flex;
-
+    
 }
 
 .navbar #men {
@@ -34,13 +35,6 @@
 .navbar #women {
     color: black;
     margin-right: 20px;
-}
-
-.navbar #container {
-    text-align: center;
-    margin: auto;
-    display: flex;
-
 }
 
 .navbar #sale {
@@ -71,10 +65,16 @@
 .pajamagirl {
     padding-top: 400px;
     background-image: url('../images/womens.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    margin-top: 90px;
+    
+   
+
 }
 
 .pajamamen {
     background-image: url('../images/mensPJ.jpeg');
 }
-
-#searchbox {}
